--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "description": "A miniprogram form component based on vest.",
   "version": "0.0.1",
   "main": "miniprogram_dist/index.js",
-  "files": [
-    "src",
-    "miniprogram_dist"
-  ],
   "scripts": {
     "dev": "vest dev",
     "build": "vest build",
     "test": "vest test"
   },
+  "files": [
+    "src",
+    "miniprogram_dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:mycolorway/vest-form.git"
+  },
+  "author": "farthinker@gmail.com",
+  "license": "MIT",
   "dependencies": {
     "@mycolorway/vest-pocket": "^0.2.1",
     "luxon": "^1.4.3",
